--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -4,4 +4,4 @@ tasks:
     dir: "native"
     cmds:
       - gcc -c my_func.c -o my_func.o
-      - ar rcs native/libmy_func.a my_func.o
+      - ar rcs libmy_func.a my_func.o
